# stupice

./: README.md  pyproject.toml
stupice/: __init__.py  __main__.py  app.py  state.py
stupice/medias/: styles.css
stupice/views/: main.glade
